# introspective-awareness

./: .env.example  .gitignore  README.md  detect_injected_thoughts.py  eval_utils.py  model_utils.py  pyproject.toml  pyproject_uzay.toml  random.ipynb  requirements.txt  steering_utils.py  vector_utils.py
results/: example_transcripts.txt
